# tap-msaccess

./: README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_msaccess/: __init__.py  __main__.py  _parser.py  client.py  parser.py  streams.py  tap.py  utils.py
tests/: __init__.py  test_core.py  test_dynamic_discovery.py
