[tool.poetry]
name = "tap-msaccess"
version = "0.1.0"
description = "`tap-msaccess` is a Singer tap for MSAccess, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Reuben Frankel <rfrankel@matatika.com>"]
keywords = [
    "ELT",
    "MSAccess",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "AGPL-3.0-only"
packages = [
    { include = "tap_msaccess" },
]

[tool.poetry.dependencies]
python = "^3.8"
importlib-resources = { version = "==6.4.*", python = "<3.9" }
singer-sdk = "^0.40.0"
fs-s3fs = { version = "~=1.1.1", optional = true }
access-parser = {git = "https://github.com/Matatika/access_parser.git"}
fsspec = "^2024.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="^0.40.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true

[tool.ruff]
src = ["tap_msaccess"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "ANN001",  # missing-type-function-argument
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "ANN201",  # missing-return-type-undocumented-public-function
    "ANN202",  # missing-return-type-private-function
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_msaccess"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core==1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-msaccess = 'tap_msaccess.tap:TapMSAccess.cli'
